[gd_scene load_steps=25 format=3 uid="uid://ck3nuqlfjj5sx"]

[ext_resource type="Script" uid="uid://caxkgub1hd5i7" path="res://scripts/ui.gd" id="1_bqqt6"]
[ext_resource type="FontFile" uid="uid://v2myfakbs1qm" path="res://assets/Fredoka.ttf" id="2_wu84c"]

[sub_resource type="FontVariation" id="FontVariation_fu7sn"]
base_font = ExtResource("2_wu84c")
variation_opentype = {
2003072104: 100,
2003265652: 600
}
spacing_glyph = 5
spacing_space = 5

[sub_resource type="LabelSettings" id="LabelSettings_qe12f"]
font = SubResource("FontVariation_fu7sn")
font_size = 120
font_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
outline_size = 30
outline_color = Color(0.5019608, 0.654902, 0.54901963, 1)
shadow_size = 36
shadow_color = Color(0.2784314, 0.28627452, 0.36862746, 1)
shadow_offset = Vector2(4, 4)

[sub_resource type="FontVariation" id="FontVariation_7vrkn"]
base_font = ExtResource("2_wu84c")
variation_opentype = {
2003072104: 100,
2003265652: 600
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.2784314, 0.28235295, 0.3647059, 1)
border_width_right = 6
border_width_bottom = 12
border_color = Color(0.1882353, 0.21176471, 0.2509804, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jix8l"]
bg_color = Color(0.196, 0.20019998, 0.28, 1)
border_width_right = 3
border_width_bottom = 6
border_color = Color(0.1882353, 0.21176471, 0.2509804, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.2336, 0.23791996, 0.32, 1)
border_width_right = 6
border_width_bottom = 12
border_color = Color(0.1882353, 0.21176471, 0.2509804, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vrkn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fu7sn"]

[sub_resource type="FontVariation" id="FontVariation_nlkkf"]
base_font = ExtResource("2_wu84c")
variation_opentype = {
2003072104: 100,
2003265652: 600
}
spacing_glyph = 5
spacing_space = 5

[sub_resource type="LabelSettings" id="LabelSettings_7vrkn"]
font = SubResource("FontVariation_nlkkf")
font_size = 120
font_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
outline_size = 30
outline_color = Color(0.5019608, 0.654902, 0.54901963, 1)
shadow_size = 36
shadow_color = Color(0.2784314, 0.28627452, 0.36862746, 1)
shadow_offset = Vector2(4, 4)

[sub_resource type="FontVariation" id="FontVariation_jix8l"]
base_font = ExtResource("2_wu84c")
variation_opentype = {
2003072104: 100,
2003265652: 600
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glbon"]
bg_color = Color(0.2784314, 0.28235295, 0.3647059, 1)
border_width_right = 6
border_width_bottom = 12
border_color = Color(0.1882353, 0.21176471, 0.2509804, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlkkf"]
bg_color = Color(0.196, 0.20019998, 0.28, 1)
border_width_right = 3
border_width_bottom = 6
border_color = Color(0.1882353, 0.21176471, 0.2509804, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qe12f"]
bg_color = Color(0.2336, 0.23791996, 0.32, 1)
border_width_right = 6
border_width_bottom = 12
border_color = Color(0.1882353, 0.21176471, 0.2509804, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8qtwp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dy7ct"]

[sub_resource type="FontVariation" id="FontVariation_angvh"]
base_font = ExtResource("2_wu84c")
variation_opentype = {
2003072104: 100,
2003265652: 600
}

[sub_resource type="LabelSettings" id="LabelSettings_glbon"]
font = SubResource("FontVariation_angvh")
font_size = 58
font_color = Color(0.9764706, 0.89411765, 0.7411765, 1)

[sub_resource type="FontVariation" id="FontVariation_0o4t1"]
base_font = ExtResource("2_wu84c")
variation_opentype = {
2003072104: 100,
2003265652: 600
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0k4wn"]
content_margin_left = 35.0
bg_color = Color(0.1882353, 0.21176471, 0.2509804, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jix8l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_glbon"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 3
script = ExtResource("1_bqqt6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.37254903, 0.49411765, 0.42352942, 1)

[node name="MainMenu" type="VBoxContainer" parent="MarginContainer/Background"]
unique_name_in_owner = true
custom_minimum_size = Vector2(950, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.32890624
anchor_top = 0.1
anchor_right = 0.67109376
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer/Background/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "DENAG CHESS"
label_settings = SubResource("LabelSettings_qe12f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Background/MainMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 180

[node name="MainMenuContents" type="VBoxContainer" parent="MarginContainer/Background/MainMenu/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="MultiplayerButton" type="Button" parent="MarginContainer/Background/MainMenu/MarginContainer/MainMenuContents"]
custom_minimum_size = Vector2(900, 145)
layout_mode = 2
size_flags_horizontal = 5
theme_override_colors/font_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_focus_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_disabled_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_outline_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_fonts/font = SubResource("FontVariation_7vrkn")
theme_override_font_sizes/font_size = 58
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fu7sn")
text = "MULTIPLAYER"

[node name="SingleplayerButton" type="Button" parent="MarginContainer/Background/MainMenu/MarginContainer/MainMenuContents"]
custom_minimum_size = Vector2(500, 145)
layout_mode = 2
size_flags_horizontal = 5
theme_override_colors/font_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_focus_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_disabled_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_outline_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_fonts/font = SubResource("FontVariation_7vrkn")
theme_override_font_sizes/font_size = 58
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fu7sn")
text = "SINGLEPLAYER"

[node name="SettingsButton" type="Button" parent="MarginContainer/Background/MainMenu/MarginContainer/MainMenuContents"]
custom_minimum_size = Vector2(500, 145)
layout_mode = 2
size_flags_horizontal = 5
theme_override_colors/font_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_focus_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_disabled_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_outline_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_fonts/font = SubResource("FontVariation_7vrkn")
theme_override_font_sizes/font_size = 58
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fu7sn")
text = "SETTINGS"

[node name="ExitButton" type="Button" parent="MarginContainer/Background/MainMenu/MarginContainer/MainMenuContents"]
custom_minimum_size = Vector2(500, 145)
layout_mode = 2
size_flags_horizontal = 5
theme_override_colors/font_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_focus_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_disabled_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_outline_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_fonts/font = SubResource("FontVariation_7vrkn")
theme_override_font_sizes/font_size = 58
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fu7sn")
text = "QUIT"

[node name="MultiplayerMenu" type="VBoxContainer" parent="MarginContainer/Background"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(950, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.32890624
anchor_top = 0.1
anchor_right = 0.67109376
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="MarginContainer/Background/MultiplayerMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "MULTIPLAYER"
label_settings = SubResource("LabelSettings_7vrkn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Background/MultiplayerMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 180

[node name="MultiplayerMenuContents" type="VBoxContainer" parent="MarginContainer/Background/MultiplayerMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="HostButton" type="Button" parent="MarginContainer/Background/MultiplayerMenu/MarginContainer/MultiplayerMenuContents"]
custom_minimum_size = Vector2(900, 145)
layout_mode = 2
size_flags_horizontal = 5
theme_override_colors/font_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_focus_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_disabled_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_outline_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_fonts/font = SubResource("FontVariation_jix8l")
theme_override_font_sizes/font_size = 58
theme_override_styles/normal = SubResource("StyleBoxFlat_glbon")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nlkkf")
theme_override_styles/hover = SubResource("StyleBoxFlat_qe12f")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dy7ct")
text = "HOST"

[node name="JoinButton" type="Button" parent="MarginContainer/Background/MultiplayerMenu/MarginContainer/MultiplayerMenuContents"]
custom_minimum_size = Vector2(500, 145)
layout_mode = 2
size_flags_horizontal = 5
theme_override_colors/font_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_focus_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_disabled_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_outline_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_fonts/font = SubResource("FontVariation_jix8l")
theme_override_font_sizes/font_size = 58
theme_override_styles/normal = SubResource("StyleBoxFlat_glbon")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nlkkf")
theme_override_styles/hover = SubResource("StyleBoxFlat_qe12f")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dy7ct")
text = "JOIN"

[node name="BackButton" type="Button" parent="MarginContainer/Background/MultiplayerMenu/MarginContainer/MultiplayerMenuContents"]
custom_minimum_size = Vector2(500, 145)
layout_mode = 2
size_flags_horizontal = 5
theme_override_colors/font_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_focus_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_disabled_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_outline_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_fonts/font = SubResource("FontVariation_jix8l")
theme_override_font_sizes/font_size = 58
theme_override_styles/normal = SubResource("StyleBoxFlat_glbon")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nlkkf")
theme_override_styles/hover = SubResource("StyleBoxFlat_qe12f")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dy7ct")
text = "BACK"

[node name="HostingMenu" type="VBoxContainer" parent="MarginContainer/Background"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(950, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.32890624
anchor_top = 0.1
anchor_right = 0.67109376
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="MarginContainer/Background/HostingMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "HOSTING GAME"
label_settings = SubResource("LabelSettings_7vrkn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Background/HostingMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 180

[node name="HostingMenuContents" type="VBoxContainer" parent="MarginContainer/Background/HostingMenu/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="StatusLabel" type="Label" parent="MarginContainer/Background/HostingMenu/MarginContainer/HostingMenuContents"]
layout_mode = 2
size_flags_horizontal = 5
text = "Loading..."
label_settings = SubResource("LabelSettings_glbon")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CancelButton" type="Button" parent="MarginContainer/Background/HostingMenu/MarginContainer/HostingMenuContents"]
custom_minimum_size = Vector2(900, 145)
layout_mode = 2
size_flags_horizontal = 5
theme_override_colors/font_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_focus_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_disabled_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_outline_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_fonts/font = SubResource("FontVariation_jix8l")
theme_override_font_sizes/font_size = 58
theme_override_styles/normal = SubResource("StyleBoxFlat_glbon")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nlkkf")
theme_override_styles/hover = SubResource("StyleBoxFlat_qe12f")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dy7ct")
text = "CANCEL"

[node name="JoinMenu" type="VBoxContainer" parent="MarginContainer/Background"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(950, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.32890624
anchor_top = 0.1
anchor_right = 0.67109376
anchor_bottom = 0.9
offset_left = -265.21875
offset_right = 265.21875
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="MarginContainer/Background/JoinMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "JOIN GAME"
label_settings = SubResource("LabelSettings_7vrkn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Background/JoinMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 180

[node name="JoinMenuContents" type="VBoxContainer" parent="MarginContainer/Background/JoinMenu/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="AddressInput" type="LineEdit" parent="MarginContainer/Background/JoinMenu/MarginContainer/JoinMenuContents"]
custom_minimum_size = Vector2(500, 140)
layout_mode = 2
size_flags_horizontal = 5
theme_override_fonts/font = SubResource("FontVariation_0o4t1")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_0k4wn")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_jix8l")
theme_override_styles/focus = SubResource("StyleBoxEmpty_glbon")
placeholder_text = "Enter IP Address Here..."

[node name="JoinButton" type="Button" parent="MarginContainer/Background/JoinMenu/MarginContainer/JoinMenuContents"]
custom_minimum_size = Vector2(900, 145)
layout_mode = 2
size_flags_horizontal = 5
theme_override_colors/font_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_focus_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_disabled_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_outline_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_fonts/font = SubResource("FontVariation_jix8l")
theme_override_font_sizes/font_size = 58
theme_override_styles/normal = SubResource("StyleBoxFlat_glbon")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nlkkf")
theme_override_styles/hover = SubResource("StyleBoxFlat_qe12f")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dy7ct")
text = "JOIN"

[node name="BackButton" type="Button" parent="MarginContainer/Background/JoinMenu/MarginContainer/JoinMenuContents"]
custom_minimum_size = Vector2(500, 140)
layout_mode = 2
size_flags_horizontal = 5
theme_override_colors/font_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_focus_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_disabled_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_outline_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_fonts/font = SubResource("FontVariation_jix8l")
theme_override_font_sizes/font_size = 58
theme_override_styles/normal = SubResource("StyleBoxFlat_glbon")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nlkkf")
theme_override_styles/hover = SubResource("StyleBoxFlat_qe12f")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dy7ct")
text = "BACK"

[node name="JoiningMenu" type="VBoxContainer" parent="MarginContainer/Background"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(950, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.32890624
anchor_top = 0.1
anchor_right = 0.67109376
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="MarginContainer/Background/JoiningMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "JOINING GAME"
label_settings = SubResource("LabelSettings_7vrkn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Background/JoiningMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 180

[node name="JoiningMenuContents" type="VBoxContainer" parent="MarginContainer/Background/JoiningMenu/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="StatusLabel" type="Label" parent="MarginContainer/Background/JoiningMenu/MarginContainer/JoiningMenuContents"]
layout_mode = 2
size_flags_horizontal = 5
text = "Loading..."
label_settings = SubResource("LabelSettings_glbon")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CancelButton" type="Button" parent="MarginContainer/Background/JoiningMenu/MarginContainer/JoiningMenuContents"]
custom_minimum_size = Vector2(900, 145)
layout_mode = 2
size_flags_horizontal = 5
theme_override_colors/font_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_focus_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_hover_pressed_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_disabled_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_colors/font_outline_color = Color(0.9764706, 0.89411765, 0.7411765, 1)
theme_override_fonts/font = SubResource("FontVariation_jix8l")
theme_override_font_sizes/font_size = 58
theme_override_styles/normal = SubResource("StyleBoxFlat_glbon")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nlkkf")
theme_override_styles/hover = SubResource("StyleBoxFlat_qe12f")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dy7ct")
text = "CANCEL"

[connection signal="pressed" from="MarginContainer/Background/MainMenu/MarginContainer/MainMenuContents/MultiplayerButton" to="." method="switch_menu" binds= [NodePath("../../../../MultiplayerMenu")]]
[connection signal="pressed" from="MarginContainer/Background/MainMenu/MarginContainer/MainMenuContents/SingleplayerButton" to="." method="singleplayer"]
[connection signal="pressed" from="MarginContainer/Background/MainMenu/MarginContainer/MainMenuContents/ExitButton" to="." method="on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/Background/MultiplayerMenu/MarginContainer/MultiplayerMenuContents/HostButton" to="." method="host"]
[connection signal="pressed" from="MarginContainer/Background/MultiplayerMenu/MarginContainer/MultiplayerMenuContents/HostButton" to="." method="switch_menu" binds= [NodePath("../../../../HostingMenu")]]
[connection signal="pressed" from="MarginContainer/Background/MultiplayerMenu/MarginContainer/MultiplayerMenuContents/JoinButton" to="." method="switch_menu" binds= [NodePath("../../../../JoinMenu")]]
[connection signal="pressed" from="MarginContainer/Background/MultiplayerMenu/MarginContainer/MultiplayerMenuContents/BackButton" to="." method="switch_menu" binds= [NodePath("../../../../MainMenu")]]
[connection signal="pressed" from="MarginContainer/Background/HostingMenu/MarginContainer/HostingMenuContents/CancelButton" to="." method="cancel_connection"]
[connection signal="pressed" from="MarginContainer/Background/HostingMenu/MarginContainer/HostingMenuContents/CancelButton" to="." method="switch_menu" binds= [NodePath("../../../../MultiplayerMenu")]]
[connection signal="pressed" from="MarginContainer/Background/JoinMenu/MarginContainer/JoinMenuContents/JoinButton" to="." method="join"]
[connection signal="pressed" from="MarginContainer/Background/JoinMenu/MarginContainer/JoinMenuContents/JoinButton" to="." method="switch_menu" binds= [NodePath("../../../../JoiningMenu")]]
[connection signal="pressed" from="MarginContainer/Background/JoinMenu/MarginContainer/JoinMenuContents/BackButton" to="." method="switch_menu" binds= [NodePath("../../../../MultiplayerMenu")]]
[connection signal="pressed" from="MarginContainer/Background/JoiningMenu/MarginContainer/JoiningMenuContents/CancelButton" to="." method="cancel_connection"]
[connection signal="pressed" from="MarginContainer/Background/JoiningMenu/MarginContainer/JoiningMenuContents/CancelButton" to="." method="switch_menu" binds= [NodePath("../../../../MultiplayerMenu")]]
